# Neural-Process-Family

./: .gitignore  LICENSE  MANIFEST.in  NOTE.md  README.md  Taskfile.yaml  data_gen.py  dataset.py  main.py  np.py  plot.py  requirements.dev.txt  requirements.txt  setup.cfg  setup.py  test.ipynb  test.py  test_models.py  train.py  util.py
.github/workflows/: codeql.yml
configs/: attnbnp.yaml  attncnp.yaml  attnnp.yaml  bnp.yaml  cnp.yaml  convcnp.yaml  np.yaml
configs/gp/: gp_shapes.yaml  optimizer.yaml
configs/image/: optimizer.yaml
graph_model/: __init__.py
neural_process/: attncnp.py  attnnp.py  base.py  cnp.py  convcnp.py  convnp.py  np.py
neural_process/models/: __init__.py  attncnp.py  attnnp.py  cnp.py  convcnp.py  convnp.py  np.py
neural_process/modules/: __init__.py  attenders.py  decoders.py  encoders.py  losses.py  metrics.py  misc.py  networks.py
neural_process/utils/: __init__.py  data.py  experiment.py
neural_processes/: aggregators.py  decoders.py  encoders.py  mlps.py  models.py
notebooks/: plot.ipynb  plot_1d.ipynb  scribble.ipynb
npf/: __init__.py  misc.py  type.py
npf/jax/: __init__.py  _data.py  data.py  dataset.py  functional.py  type.py  typing.py  utils.py
npf/models/: __init__.py  attncnp.py  attnnp.py  base.py  cnp.py  convcnp.py  convnp.py  flownp.py  gnp.py  np.py
npf/modules/: __init__.py  attention.py  metric.py  misc.py  net.py  nflows.py  setconv.py
npf/utils/: misc.py
scripts/: add_config.py  test.py  train.py
scripts/jax/: test.py  (+2 more)
utils/: __init__.py  data.py  data1.py  get_data.py  get_model.py  plot.py
(+383 files in other folders)
