[metadata]
name = np-family
version = attr: npf.__version__
author =  EungGu Yun
author_email = yuneg11@gmail.com
description = Neural Processes implementations in JAX and PyTorch
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yuneg11/Neural-Process-Family
project_urls =
    Documentation = https://yuneg11.github.io/Neural-Process-Family
    Source = https://github.com/yuneg11/Neural-Process-Family
    Tracker = https://github.com/yuneg11/Neural-Process-Family/issues
license = MIT license
licens_files = LICENSE
classifiers =
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Software Development :: Libraries :: Python Modules
keywords = npf, NPF, neural process

[options]
packages = find:
package_dir =
    npf = npf
python_requires = >=3.7
install_requires =
setup_requires =
    build
    setuptools
zip_safe = True
